directory structure, disqus, about content, ...

--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,11 @@ type: mainpage
 </p>
 
 <p>
-	Just so much for the usage of the website: The navigation bar at the top can be used to (from left to right) open a side menu, go back to the mainpage, show a page with information about myself, have a look at the tag list and call the imprint. The side menu includes a short profile of me, language switcher, a short version of the tag list and an archive.
+	<em>Just so much for the usage of the website:</em> The navigation bar at the top can be used to (from left to right) open a side menu, go back to the mainpage, view the archive, have a look at the tag list, show a page with information about myself and call the imprint. The side menu includes a short profile of me and a language switcher.
+</p>
+
+<p>
+	<em>Privacy note:</em> I use <a href="http://www.disqus.com">disqus</a> to provide a commentary function. Anyone how creates an account there has to live with the related privacy issues. That in mind, I exclicitely allow to comment as a guest (thus without registration).
 </p>
 
 <p>
