--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ type: mainpage
 </p>
 
 <p>
-Zur Bedienung der Seite sei nur soviel gesagt: &Uuml;ber die ganz oben angebrachte Navigationsleiste kann man (von links nach rechts) ein Seitenmen&uuml; &ouml;ffnen, zur Hauptseite gelangen, eine Seite mit Informationen &uuml;ber mich anzeigen, die Tag-Liste aufrufen und das Impressum einsehen. Das Seitenmen&uuml; bietet ein Kurzprofil von mir, Sprachauswahl, eine Kurzversion der Tag-Liste und ein Archiv.
+	Zur Bedienung der Seite sei nur soviel gesagt: &Uuml;ber die ganz oben angebrachte Navigationsleiste kann man (von links nach rechts) ein Seitenmen&uuml; &ouml;ffnen, zur Hauptseite gelangen, das Archiv ansehen, die Tag-Liste aufrufen, eine Seite mit Informationen &uuml;ber mich anzeigen und das Impressum einsehen. Das Seitenmen&uuml; bietet ein Kurzprofil von mir und eine M&ouml;glichkeit, die Sprache zu wechseln.
+</p>
+
+<p>
+	<em>Datenschutzhinweis:</em> Ich benutze <a href="http://www.disqus.com">disqus</a> um eine Kommentarfunktion anzubieten. Wer sich dort anmeldet muss mit allen damit verbundenen datenschutzrechtlichen Einschr&auml;nkungen leben. Daher habe ich es explizit erlaubt, auch als Gast (also ohne Anmeldung) kommentieren zu d&uuml;rfen.
 </p>
 
 <p>
