layout simplification, new footer, content gets dark when side menu opens

--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@ type: mainpage
 </p>
 
 <p>
-	<em>Just so much for the usage of the website:</em> The navigation bar at the top can be used to (from left to right) open a side menu, go back to the mainpage, view the archive, have a look at the tag list, show a page with information about myself and call the imprint. The side menu includes a short profile of me and a language switcher.
+	Just so much for the usage of the website: The navigation bar at the top can be used to (from left to right) open a side menu, go back to the mainpage, view the archive, have a look at the tag list, show a page with information about myself and call the imprint. The side menu includes a short profile of me and a language switcher.
 </p>
 
 <p>
