--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ type: mainpage
 <h1>Willkommen auf www.michael-schaefer.org</h1>
 
 <p>
-	Sch&ouml;n, dass du den Weg auf <a href="/about/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten drei ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt.
+	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten drei ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt.
 </p>
 
 <p>
