proceeded with experimental design

--- a/en/index.html
+++ b/en/index.html
@@ -4,18 +4,20 @@ title: Mainpage
 type: mainpage
 ---
 
-<h1>Welcome on www.michael-schaefer.org</h1>
-
 <p>
 	Great that you found your way to <a href="/en/about/">my</a> website! I use this little blog to publish articles on a regularly unregular basis. Topics vary strongly according to my interests. This mainpage always includes a list of the three most recently published articles. That way you can see quickly if there is something new.
 </p>
 
 <p>
-	Just so much for the usage of the website: The navigation bar at the top can be used to (from left to right) open a side menu, go back to the mainpage, view the archive, have a look at the tag list, show a page with information about myself and call the imprint. The side menu includes a short profile of me and a language switcher.
-</p>
-
-<p>
-	<em>Privacy note:</em> I use <a href="http://www.disqus.com">disqus</a> to provide a commentary function. Anyone how creates an account there has to live with the related privacy issues. That in mind, I exclicitely allow to comment as a guest (thus without registration).
+	<em>Privacy notes:</em>
+	<ul>
+		<li>
+			I use <a href="http://www.disqus.com">disqus</a> as commentary platform. To prevent that everyone has to create an account there, I exclicitely allow to comment as a guest (thus without registration).
+		</li>
+		<li>
+			In order to make the above picture hidden throughout the entire visit the website must be allowed to create a session cookie. The cookie will only contain that one information.
+		</li>
+	</ul>
 </p>
 
 <p>
