--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@ title: Hauptseite
 type: mainpage
 ---
 
-<h1>Willkommen auf www.michael-schaefer.org</h1>
-
 <p>
 	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten drei ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt.
 </p>
 
 <p>
-	Zur Bedienung der Seite sei nur soviel gesagt: &Uuml;ber die ganz oben angebrachte Navigationsleiste kann man (von links nach rechts) ein Seitenmen&uuml; &ouml;ffnen, zur Hauptseite gelangen, das Archiv ansehen, die Tag-Liste aufrufen, eine Seite mit Informationen &uuml;ber mich anzeigen und das Impressum einsehen. Das Seitenmen&uuml; bietet ein Kurzprofil von mir und eine M&ouml;glichkeit, die Sprache zu wechseln.
-</p>
-
-<p>
-	<em>Datenschutzhinweis:</em> Ich benutze <a href="http://www.disqus.com">disqus</a> um eine Kommentarfunktion anzubieten. Wer sich dort anmeldet muss mit allen damit verbundenen datenschutzrechtlichen Einschr&auml;nkungen leben. Daher habe ich es explizit erlaubt, auch als Gast (also ohne Anmeldung) kommentieren zu d&uuml;rfen.
+	<em>Hinweise:</em>
+	<ul>
+		<li>
+			Ich benutze <a href="http://www.disqus.com">disqus</a> als Kommentarplattform. Damit sich dort niemand anmelden muss habe ich es explizit erlaubt, auch als Gast (also ohne Anmeldung) kommentieren zu d&uuml;rfen. <noscript>Javascript muss aktiviert sein, damit disqus funktioniert!</noscript>
+		</li>
+		<noscript>
+			<li>
+				Damit das obige Bild w&auml;hrend des gesamten Besuches auf dieser Seite versteckt bleibt muss Javascript aktiviert sein. Ansonsten muss es immer wieder neu versteckt werden.
+			</li>
+		</noscript>
+	</ul>
 </p>
 
 <p>
