--- a/en/imprint/index.html
+++ b/en/imprint/index.html
@@ -4,21 +4,23 @@ title: Imprint
 type: imprint
 ---
 
+<h1>Information in accordance with article 5 TMG</h1>
 <p>
   Here and below, the abbreviation TMG denotes the german "Telemediengesetz" (German Teleservices Act).
-</p>		
+</p>    
 
-<h2>Information in accordance with article 5 TMG:</h2>		
+<h2>Address</h2>
 <p>
   Michael Schaefer<br/>K&ouml;rnerstra&szlig;e 15<br/>48151 M&uuml;nster<br/>Germany
 </p>
 
-<h2>Contact:</h2>
-<span class="contact">
+<h2>Contact</h2>
+<a href="mailto:mail@michael-schaefer.org">mail@michael-schaefer.org</a>
+<!--<span class="contact">
   <object data="/media/contactEnglish.svg" type="image/svg+xml">
     <img src="/media/contactEnglish.png" />
   </object>
-</span>
+</span>-->
 
 <h1>Legal disclaimer</h1>
 <p>
