--- a/impressum/index.html
+++ b/impressum/index.html
@@ -4,17 +4,19 @@ title: Impressum
 type: imprint
 ---
 
-<h2>Angaben gem&auml;&szlig; Paragraph 5 TMG:</h2>
+<h1>Angaben gem&auml;&szlig; Paragraph 5 TMG</h1>
+<h2>Anschrift</h2>
 <p>
   Michael Schaefer<br/>K&ouml;rnerstra&szlig;e 15<br/>48151 M&uuml;nster
 </p>
 
-<h2>Kontakt:</h2>
-<span class="contact">
-  <object data="/media/contact.svg" type="image/svg+xml">
-    <img src="/media/contact.png" />
-  </object>
-</span>
+<h2>Kontakt</h2>
+<a href="mailto:mail@michael-schaefer.org">mail@michael-schaefer.org</a>
+<!--  <span class="contact">  
+    <object data="/media/contact.svg" type="image/svg+xml">
+      <img src="/media/contact.png" />
+    </object>  
+  </span> -->
 
 <h1>Haftungsausschluss (Disclaimer)</h1>
 
