--- a/en/index.html
+++ b/en/index.html
@@ -5,18 +5,21 @@ type: mainpage
 ---
 
 <p>
-	Great that you found your way to <a href="/en/about/">my</a> website! I use this little blog to publish articles on a regularly unregular basis. Topics vary strongly according to my interests. This mainpage always includes a list of the three most recently published articles. That way you can see quickly if there is something new.
+	Great that you found your way to <a href="/en/about/">my</a> website! I use this little blog to publish articles on a regularly unregular basis. Topics vary strongly according to my interests. This mainpage always includes a list of the three most recently published articles. That way you can see quickly if there is something new.<br/>
+	A note about the handling: With the three half circle shaped buttons at the very top you can switch the language (left and right) and hide resp. show the banner (middle).
 </p>
 
 <p>
 	<em>Privacy notes:</em>
 	<ul>
 		<li>
-			I use <a href="http://www.disqus.com">disqus</a> as commentary platform. To prevent that everyone has to create an account there, I exclicitely allow to comment as a guest (thus without registration).
+			I use <a href="http://www.disqus.com">disqus</a> as commentary platform. To prevent that everyone has to create an account there, I exclicitely allow to comment as a guest (thus without registration). <noscript>For disqus to work, Javascript must be activated!</noscript>
 		</li>
-		<li>
-			In order to make the above picture hidden throughout the entire visit the website must be allowed to create a session cookie. The cookie will only contain that one information.
-		</li>
+		<noscript>
+			<li>
+				In order to make the above picture hidden throughout the entire visit , Javascript must be activated. Otherwise you have to hide it again every time you follow a link.
+			</li>
+		</noscript>
 	</ul>
 </p>
 
