--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ type: mainpage
 ---
 
 <p>
-	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten drei ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt.
+	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten drei ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt.<br/>
+	Zur Bedienung: Mit den drei halbkreisf&ouml;rmigen Kn&ouml;pfen ganz oben kann man die Sprache umstellen (au&szlig;en) und das Banner verstecken bzw. wieder anzeigen (mitte).
 </p>
 
 <p>
