--- a/impressum/index.html
+++ b/impressum/index.html
@@ -4,7 +4,7 @@ title: Impressum
 type: imprint
 ---
 
-<h1>Angaben gem&auml;&szlig; Paragraph 5 TMG</h1>
+<h1>Angaben gem&auml;&szlig; &sect; 5 TMG</h1>
 <h2>Anschrift</h2>
 <p>
   Michael Schaefer<br/>K&ouml;rnerstra&szlig;e 15<br/>48151 M&uuml;nster
@@ -22,7 +22,7 @@ type: imprint
 
 <h2>Haftung f&uuml;r Inhalte</h2>	
 <p>
-  Als Diensteanbieter bin ich gem&auml;&szlig; Paragraph 7 Absatz 1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach Paragraphen 8 bis 10 TMG bin ich als Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werde ich diese Inhalte umgehend entfernen.
+  Als Diensteanbieter bin ich gem&auml;&szlig; &sect; 7 Absatz 1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG bin ich als Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werde ich diese Inhalte umgehend entfernen.
 </p>
     
 <h2>Haftung f&uuml;r Links</h2>
