--- a/index.html
+++ b/index.html
@@ -28,5 +28,40 @@ type: mainpage
 </p>
 
 
-<h1>Aktuelle Artikel</h1>
-{% include articleList.html type="recent" %}
+<h1><a class="anchor" name="article_list">Artikel-Liste</a></h1>
+{% if paginator.posts == nil %}
+	<em>{{ site.data.i18n["de"].no_articles }}</em>
+{% else %}
+
+	{% if paginator.previous_page %}
+	<p>
+		<a href="/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}#article_list">neuere Artikel</a>
+	</p>
+	{% endif %}
+
+	<ul class="no_bullet">
+		{% for post in paginator.posts %}
+		<li>
+			<span class="left">{{ post.date | date: "%d.%m.%Y" }}:</span>
+			<span class="headline">
+				<a href="{{ post.url }}">{{ post.title }}</a>			
+				<p>
+					{% if post.description %}
+					{{ post.description }}
+					{% else %}
+					{{ site.data.i18n["de"].no_description }}
+					{% endif %}
+				</p>			
+			</span>
+		</li>
+		{% endfor %}
+	</ul>
+
+	{% if paginator.next_page %}
+	<p>
+		<a href="/page{{ paginator.next_page }}/#article_list">&auml;ltere Artikel</a>
+	</p>
+	{% endif %}
+
+{% endif %}
+
