yet another font change, different small corrections

--- a/en/imprint/index.html
+++ b/en/imprint/index.html
@@ -10,12 +10,17 @@ type: imprint
 </p>    
 
 <h2>Address</h2>
-<p>
-  Michael Schaefer<br/>K&ouml;rnerstra&szlig;e 15<br/>48151 M&uuml;nster<br/>Germany
-</p>
+<address>
+  Michael Schaefer<br/>
+  K&ouml;rnerstra&szlig;e 15<br/>
+  48151 M&uuml;nster<br/>
+  Germany
+</address>
 
 <h2>Contact</h2>
-<a href="mailto:mail@michael-schaefer.org">mail@michael-schaefer.org</a>
+<p>
+	<a href="mailto:mail@michael-schaefer.org">mail@michael-schaefer.org</a>
+</p>
 
 <h1>Legal disclaimer</h1>
 <p>
