--- a/en/index.html
+++ b/en/index.html
@@ -9,11 +9,11 @@ type: mainpage
 	A note about the handling: With the three half circle shaped buttons at the very top you can switch the language (left and right) and hide resp. show the banner (middle).
 </p>
 
-<p>
-	<em>Information:</em>
+<h2>Notes</h2>
+<p>	
 	<ul>
 		<li>
-			I use <a href="http://www.disqus.com">disqus</a> as commentary platform. To prevent that everyone has to create an account there, I exclicitely allow to comment as a guest (thus without registration). <noscript>For disqus to work, Javascript must be activated!</noscript>
+			I use <a href="http://www.disqus.com">disqus</a> as commentary platform. To prevent you from the necessity of creating an account there, I exclicitely allow to comment as a guest (thus without registration). <noscript>For disqus to work, Javascript must be activated!</noscript>
 		</li>
 		<noscript>
 			<li>
@@ -24,7 +24,7 @@ type: mainpage
 </p>
 
 <p>
-	Have a lot of fun on my website!
+	Have fun on my website!
 </p>
 
 
