--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ type: mainpage
 	Zur Bedienung: Mit den drei halbkreisf&ouml;rmigen Kn&ouml;pfen ganz oben kann man die Sprache umstellen (au&szlig;en) und das Banner verstecken bzw. wieder anzeigen (mitte).
 </p>
 
-<p>
-	<em>Hinweise:</em>
+<h2>Hinweise</h2>
+<p>	
 	<ul>
 		<li>
 			Ich benutze <a href="http://www.disqus.com">disqus</a> als Kommentarplattform. Damit sich dort niemand anmelden muss habe ich es explizit erlaubt, auch als Gast (also ohne Anmeldung) kommentieren zu d&uuml;rfen. <noscript>Javascript muss aktiviert sein, damit disqus funktioniert!</noscript>
