--- a/archiv/index.html
+++ b/archiv/index.html
@@ -5,7 +5,7 @@ type: archive
 ---
 
 <p>
-	Es folgt eine chronologisch absteigend sortierte Liste aller bisher ver&ouml;ffentlichten (lediglich deutschsprachigen) Artikel.
+	Es folgt eine chronologisch absteigend sortierte Liste aller bisher ver&ouml;ffentlichten deutschsprachigen Artikel. Die englischen Artikel finden sich <a href="/en/archive/">hier</a>.
 </p>
 
 {% include articleList.html type="archive" %}
