--- a/impressum/index.html
+++ b/impressum/index.html
@@ -6,12 +6,16 @@ type: imprint
 
 <h1>Angaben gem&auml;&szlig; &sect; 5 TMG</h1>
 <h2>Anschrift</h2>
-<p>
-  Michael Schaefer<br/>K&ouml;rnerstra&szlig;e 15<br/>48151 M&uuml;nster
-</p>
+<address>
+  Michael Schaefer<br/>
+  K&ouml;rnerstra&szlig;e 15<br/>
+  48151 M&uuml;nster
+</address>
 
 <h2>Kontakt</h2>
-<a href="mailto:mail@michael-schaefer.org">mail@michael-schaefer.org</a>
+<p>
+	<a href="mailto:mail@michael-schaefer.org">mail@michael-schaefer.org</a>
+</p>
 
 <h1>Haftungsausschluss (Disclaimer)</h1>
 
