rss feed, marker for external links

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ type: mainpage
 ---
 
 <p>
-	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;ig unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt.<br/>
-	Zur Bedienung: Mit den drei halbkreisf&ouml;rmigen Kn&ouml;pfen ganz oben kann man die Sprache umstellen (au&szlig;en) und das Banner verstecken bzw. wieder anzeigen (mitte).
+	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;ig unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt. Wer noch schneller und unkomplizierter auf dem Laufenden bleiben will kann auch den <a href="/feed.xml">RSS-Feed</a> benutzen.
+	<br/>
+	Zur Bedienung: Mit den drei halbkreisf&ouml;rmigen Kn&ouml;pfen ganz oben kann man die Sprache umstellen (au&szlig;en) und das Banner verstecken bzw. wieder anzeigen (mitte).	
 </p>
 
 <h2>Hinweise</h2>
