--- a/uebermich/index.html
+++ b/uebermich/index.html
@@ -25,7 +25,7 @@ type: about
 </aside>
 
 <p>							
-  Sch&ouml;n, dass du den Weg auf <a href="?page=imprint">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel. Die Themen varriieren dabei stark nach meinen Interessen. Doch zun&auml;chst m&ouml;chte ich ein paar Informationen &uuml;ber mich selbst geben.
+  Sch&ouml;n, dass du den Weg auf meine Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel. Die Themen varriieren dabei stark nach meinen Interessen. Doch zun&auml;chst m&ouml;chte ich ein paar Informationen &uuml;ber mich selbst geben.
 </p>
 
 <h2>Berufliches</h2>
