new font open sans, added NoScript addon warning in main page

--- a/en/index.html
+++ b/en/index.html
@@ -16,9 +16,9 @@ type: mainpage
 	<li>
 		I use <a href="http://www.disqus.com">disqus</a> as commentary platform. To prevent you from the necessity of creating an account there, I exclicitely allow to comment as a guest (thus without registration). <noscript>For disqus to work, Javascript must be activated!</noscript>
 	</li>		
-	<li id="noscript">
-		In order to make the banner hidden throughout the entire visit, Javascript must be activated. Otherwise you have to hide it again every time you follow a link.
-	</li>		
+	<li class="noscript">
+		In order to make the banner hidden throughout the entire visit, Javascript must be activated. Otherwise you have to hide it again every time you follow a link. Furthermore, an activated NoScript addon prevents the site from loading the main and especially a symbol font. Affected users will experience missing symbols and a browser-dependent default font.
+	</li>	
 </ul>
 
 <p>
