--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ type: mainpage
 		Ich benutze <a href="http://www.disqus.com">disqus</a> als Kommentarplattform. Damit sich dort niemand anmelden muss habe ich es explizit erlaubt, auch als Gast (also ohne Anmeldung) kommentieren zu d&uuml;rfen. <noscript>Javascript muss aktiviert sein, damit disqus funktioniert!</noscript>
 	</li>		
 	<li id="noscript">			
-		Damit das Banner w&auml;hrend des gesamten Besuches auf dieser Seite versteckt bleibt muss Javascript aktiviert sein. Ansonsten muss es immer wieder neu versteckt werden.
-	</li>
+		Damit das Banner w&auml;hrend des gesamten Besuches auf dieser Seite versteckt bleibt muss Javascript aktiviert sein. Ansonsten muss es immer wieder neu versteckt werden. Weiterhin kann ein aktiviertes NoScript Addon das Nachladen der Haupt- und einer Symbolschriftart verhindern. Betroffene Benutzer bemerken fehlende Symbole und eine Browser-abhängige Standardschriftart.
+	</li>	
 </ul>
 
 <p>
