yet another new design started

--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@ type: mainpage
 ---
 
 <p>
-	Great that you found your way to <a href="/en/about/">my</a> website! I use this little blog to publish articles on a regularly unregular basis. Topics vary strongly according to my interests. This mainpage always includes a list of the most recently published articles. That way you can see quickly if there is something new. The ones who want to stay tuned even faster and more uncomplicated can use one of the following feeds: <a href="/en/rss.xml">RSS</a>, <a href="/en/atom.xml">Atom</a>.
+	Great that you found your way to my website! I use this little blog to publish articles on a regularly unregular basis. Topics vary strongly according to my interests. This mainpage always includes a list of the most recently published articles. That way you can see quickly if there is something new. The ones who want to stay tuned even faster and more uncomplicated can use one of the following feeds: <a href="/en/rss.xml">RSS</a>, <a href="/en/atom.xml">Atom</a>.
 </p>
 <p>
 	A note about the handling: With the far-right button in the navigation bar you activate a menu that allows for switching the language between german and english; in addition you can hide resp. show the banner.
