--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ type: mainpage
 ---
 
 <p>
-	Sch&ouml;n, dass du den Weg auf <a href="/uebermich/">meine</a> Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;ig unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt. Wer noch schneller und unkomplizierter auf dem Laufenden bleiben will kann auch einen der folgenden Feeds benutzen: <a href="/rss.xml">RSS</a>, <a href="/atom.xml">Atom</a>.
+	Sch&ouml;n, dass du den Weg auf meine Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;ig unregelm&auml;&szlig;ig Artikel zu diversen Themen, die stark nach meinen Interessen variieren. Auf dieser Hauptseite findet sich immer eine &Uuml;bersicht mit den letzten ver&ouml;ffentlichten Artikeln. So kann man schnell sehen, ob es etwas Neues gibt. Wer noch schneller und unkomplizierter auf dem Laufenden bleiben will kann auch einen der folgenden Feeds benutzen: <a href="/rss.xml">RSS</a>, <a href="/atom.xml">Atom</a>.
 </p>
 <p>
 	Zur Bedienung: Mit dem Knopf rechts au&szlig;en in der Navigationsleiste gelangt man an ein Men&uuml; in dem sich die Sprache zwischen deutsch und englisch umstellen l&auml;sst; au&szlig;erdem kann man das Banner verstecken bzw. wieder anzeigen.
