new design: beta stage reached

--- a/biographie/index.html
+++ b/biographie/index.html
@@ -4,6 +4,7 @@ title: Biographie
 type: about
 ---
 
+<article>
 <h1>Biographie</h1>
 
 <p>							
@@ -36,3 +37,4 @@ Abschlie&szlig;end noch einige ausgew&auml;hlte Links, die mit mir und/oder mein
 		(GitHub-Account mit einigen meiner Softwareprojekte)
 	</li>
 </ul>
+</article>
