--- a/en/biography/index.html
+++ b/en/biography/index.html
@@ -4,6 +4,7 @@ title: Biography
 type: about
 ---
 
+<article>
 <h1>Biography</h1>
 
 <p>		
@@ -36,3 +37,4 @@ Finally, some selected links that are concerned with either myself or my project
 		(GitHub account with some of my software projects)
 	</li>
 </ul>
+</article>
