--- a/en/imprint/index.html
+++ b/en/imprint/index.html
@@ -4,6 +4,7 @@ title: Imprint
 type: imprint
 ---
 
+<article>
 <h1>Information in accordance with &sect; 5 TMG</h1>
 <p>
   Here and below, the abbreviation TMG denotes the german "Telemediengesetz" (German Teleservices Act).
@@ -47,3 +48,4 @@ type: imprint
     Source: <a href="http://www.e-recht24.de/muster-disclaimer.htm">Disclaimer eRecht24</a>. The specimen obtained from there was transferred from plural (&quot;wir&quot; [german for &quot;we&quot;] etc.) to singular (&quot;ich&quot; [german for &quot;I&quot; and &quot;me&quot;] etc.). Apart from that, it is printed in its precise wording.    
   </em>
 </p>
+</article>
