--- a/impressum/index.html
+++ b/impressum/index.html
@@ -4,6 +4,7 @@ title: Impressum
 type: imprint
 ---
 
+<article>
 <h1>Angaben gem&auml;&szlig; &sect; 5 TMG</h1>
 <h2>Anschrift</h2>
 <address>
@@ -39,3 +40,4 @@ type: imprint
     Quelle: <a href="http://www.e-recht24.de/muster-disclaimer.htm">Disclaimer eRecht24</a>. Das von dort bezogene Muster wurde von mir aus der Mehrzahl (&quot;wir&quot; usw.) in die Einzahl (&quot;ich&quot; usw.) &uuml;bertragen, sonst jedoch im Wortlaut beibehalten.
   </em>
 </p>
+</article>
